# ComfyUI-BooruBrowser

./: README.md  __init__.py  pyproject.toml  requirements.txt
nodes/: SILVER_FL_BooruBrowser.py
web/: appearance.js
web/nodes/: SILVER_FL_BooruBrowser.js
